<?xml version="1.0"?>
<package format="3">
  <name>path_planning</name>
  <version>0.0.1</version>
  <description>Path planning nodes</description>
  <maintainer email="nvidia@nvidia.local">pi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>image_tools</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
